<resources>
    <string name="app_name">Exotikos</string>
    <string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="btn_ask_nfor_help">Ask\nfor help</string>
    <string name="UseWith">Scan</string>
    <string name="airline">Airline</string>
    <string name="select_airline">Select airline...</string>
    <string name="flight_number">Flight Number</string>
    <string name="new_trip_enter_flight_number">Enter flight number</string>
    <string name="new_trip_departure_date">Departure date</string>
    <string name="new_trip_scan_boarding_pass">Or enter your flight information</string>
    <string name="new_trip_scan">Scan Boarding Pass</string>
    <string name="airline_pick_search_by_name">Search by name...</string>
    <string name="pick_airline">Pick airline</string>
    <string name="new_trip_select_flight">Select flight</string>
    <string name="new_trip">New trip</string>
    <string name="select_flight">Select flight</string>
    <string name="trips_activity">Trips</string>
    <string name="idString">ID/Passport</string>
    <string name="cabinBags">Cabin Bags</string>
    <string name="liquidRules1">Quart-sized bag of Liquids</string>
    <string name="liquidRules2">Children Formula, Juice or Milk allowed</string>
    <string name="liquidRules3">Medication allowed, presciption recommended</string>
    <string name="tripStart">Start the Trip</string>
    <string name="letsStart">Lets Start</string>
    <string name="startBarcode">Please Scan Ticket Barcode</string>
    <string name="flightNumberlbl">Flight Number</string>
    <string name="getDtls">Get Details</string>
    <string name="findAiport">Where is the Airport?</string>
    <string name="launchScan">Checkin Completed: Scan Boarding</string>
    <string name="laptopRules">Remove Laptop, Tabs, and Camera from bags.</string>
    <string name="strollerRules">Check in Stroller</string>
    <string name="bagRules">One additional bagpack or handbag</string>
    <string name="travelDatehint">Date of travel</string>
    <string name="timeofFlight">Time of Flight</string>
    <string name="startTravel">Travel Start Time</string>
    <string name="checkin">Security Checkin</string>
    <string name="boarding">Boarding</string>
    <string name="security_video">Security Checking Procedure</string>
    <string name="launchSecurityCheck">Security Checkin</string>
    <string name="scan_parsing_error">Error scanning boarding ticket</string>
    <string name="call_action">Call</string>
    <string name="translate_action">Translator</string>
    <string name="map_action">Map</string>
    <string name="boardingGate">Boarding Information</string>
    <string name="landing">Flight Landing Time</string>
    <string name="carouselLbl">Carousel Number</string>
    <string name="baggageCarousel">Baggage Carousel</string>
    <string name="dateLanding">Flight Landing Date</string>
    <string name="check_in_info" formatted="false">
        <![CDATA[
        This is time for check-in. You have to go to check-in station for <b> %s</b>. Staff will ask you for your passport and provide you the boarding card with a seat number. You will use it during boarding process.
        ]]></string>
    <string name="check_in_station" formatted="false">
        <![CDATA[
        Go to <b> %s </b> check-in station.
        ]]></string>
    <string name="check_in_luggage_weight">Check the luggage’s weight. if it is too heavy you can repack some stuff to your handbag.</string>
    <string name="check_in_passport">Prepare passport and ticket.</string>
    <string name="check_in_repack">It is the last chance to move your cosmetics from handbag to luggage</string>
    <string name="check_in_scan">Scan your boarding card to provide information about the seat# </string>
    <string name="check_in_station_question_english" formatted="false">Can you show me where is %s check in station?</string>
    <string name="check_in_weight_question_english">Can you show me where I can weigh my luggage?</string>
    <string name="check_in_hint1_description">
        <![CDATA[
        At the check-in station you leave your luggage. So now you have the last change to repack your stuff.
        <br/><b>Remember</b>
        <ul><li>The luggage should have weight under 45lb/23kg - otherwise you will have to pay extra</li>
        <li>There are some limitation for handbag. It is better to repack to luggage cosmetics, alcohol</li></ul>
        Staff checks your ticket, selects a seat for you and provides boarding card. <br/>
        <b>Good to know</b>
        <ul><li>You can ask for a seat next to window or aisle</li>
        <li>Lower seat number means you will be able get out of a plan faster</li>
        <li>You can find the seat # on the boarding card</li></ul>
        ]]></string>
    <string name="check_in_hint_tab_description">What will happen</string>
    <string name="check_in_hint_tab_next_step">Next Step</string>
    <string name="in_plane_welcome" formatted="false"><![CDATA[
    Congratulation you are on the plane. Now it is time to relax. You should be in <b>%s</b> in <b>%s</b> at <b>%s</b> local time.
    ]]></string>
    <string name="in_plane_hint_tab_exercises0">Long-haul flights can be rough on your body. Sitting for hours in the same position can leave your muscles sore and legs numb.<br/>
        In next step you can find exercises which will help make your trip more compfortable.</string>
    <string name="in_plane_hint_tab_exercises1">Foots</string>
    <string name="in_plane_hint_tab_exercises2">Foots</string>
    <string name="in_plane_hint_tab_exercises3">Knees</string>
    <string name="in_plane_hint_tab_exercises4">Shoulders</string>
    <string name="in_plane_hint_tab_exercises5">Neck</string>
    <string name="in_plane_hint_tab_exercises6">Beck</string>
    <string name="in_plane_hint_tab_exercises7">Walk</string>
    <string name="in_plane_hint_exercise1_info">TODO - translate text from picture1</string>
    <string name="in_plane_hint_exercise2_info">TODO - translate text from picture2</string>
    <string name="in_plane_hint_exercise3_info">TODO - translate text from picture3</string>
    <string name="in_plane_hint_exercise4_info">TODO - translate text from picture4</string>
    <string name="in_plane_hint_exercise5_info">TODO - translate text from picture5</string>
    <string name="in_plane_hint_exercise6_info">TODO - translate text from picture6</string>
    <string name="in_plane_hint_exercise7_info">TODO - translate text from picture7</string>
    <string name="delete_trip">Delete trip?</string>
    <string name="yes_delete">Yes, Delete</string>
    <string name="sec_check_in_hint_tab_description">Checkin List</string>
    <string name="sec_check_in_hint_tab_help">Help</string>
    <string name="sec_check_in_hint_description">Checkin List</string>
    <string name="sec_check_in_hint_help">Help</string>
    <string name="sec_check_in_hint_tab_baggage">Baggage Help</string>
    <string name="sec_check_in_hint_tab_restricted">Restricted Items</string>
    <string name="liquidRules">Liquids Regulation</string>
    <string name="restrictedItemsList">The following categories have restrictions</string>
    <string name="firearmsDetails">No Firearms are allowed in Carryon Bags. Flares, Gun Lighters, and Gun Powder is prohibited in Checking bags.</string>
    <string name="firearms">Firearms</string>
    <string name="selfDefense">Self Defense</string>
    <string name="sharpObj">Sharp Objects</string>
    <string name="sportingGoods">Sporting Goods</string>
    <string name="tools">Tools</string>
    <string name="selfDefenseDetails">No Self Defense items are allowed in Carryon Bags. Items can be taken in Checkin in luggage.</string>
    <string name="flammable">Explosives/Flammable</string>
    <string name="flammableDetails">Electronic Cigarettes and Vaping Devices, Lighters without fuel, Up to 3.4 oz./100.55 ml of Non-Flammable Liquid, Gel, or Aerosol, Safety Matches, Up to two in life vests and two spares of Small Compressed Gas Cartridges are allowed in Carryon bags.</string>
    <string name="sharpObjDetails">Only Disposable Razors are allowed in Carryon. Other sharp objects such as scissors, knives, etc are allowed in Checkin Luggage.</string>
    <string name="sportingGoodsDetails">Skates, including ice skates and rollerblades are allowed in Carryon. Other sporting goods such as baseball bats, etc can be taken in Checkin Luggage.</string>
    <string name="toolsDetails">Screwdrivers/Wrenches/Pliers Less than seven inches in length are allowed in Carryon. Others such as hammer, drills, drill bits, etc can be taken in Checkin Luggage.</string>

    <!-- Notifications -->
    <string name="baggage_claim_notification">Your baggage will be in claim %s</string>
    <string name="arrival_gate_notification" formatted="false">Your flight will arrive to Gate %s</string>
    <string name="departure_gate_notification" formatted="false">Your flight will depart from Gate %s</string>
    <string name="departure_terminal_notification" formatted="false">Your flight will depart from Terminal %s</string>
    <string name="arrival_terminal_notification" formatted="false">Your flight will arrive to Terminal %s</string>
    <string name="arrival_time_notification" formatted="false">Your flight arrival was %s %s</string>
    <string name="departure_time_notification" formatted="false">Your flight departure was %s %s</string>
    <string name="date_difference_ahead">moved ahead</string>
    <string name="date_difference_delay">delayed</string>
    <string name="flight_checkin_notification">You can now Check In</string>
    <string name="leave_for_airport_notification">You should head to %s airport</string>
    <string name="head_to_security_notification">You should go through security to avoid delays</string>
    <string name="head_to_gate_notification">Head to Gate %s</string>

    <!-- Tabs titles -->
    <string name="card_title_destination">Destination</string>
    <string name="card_title_boarding">Boarding</string>
    <string name="card_title_sec_checkin">Security</string>
    <string name="card_title_checkin">Check-in</string>
    <string name="card_title_preparation">Preparation</string>
    <string name="card_title_plane">Flight</string>

    <string name="select_date">Select departing date ...</string>
    <string name="help_header">SOS</string>
    <string name="boardingInfo">Please check the boarding terminal gate information below and proceed to the terminal and gate for boarding.</string>
    <string name="boardingLine">Boarding Line</string>
    <string name="boardingGateHd">Boarding Gate</string>
    <string name="boardingLineExplanation">When you hear the announcement, line up for boarding the plane. Follow the instructions and board either based on your seat or boarding group.</string>
    <string name="liquidsExplanation">Do not pack more than 3.4 ounces of liquids. All the liquids should git in a quart size bag.</string>
    <string name="boardingGateExplanation">Find your terminal and then your gate. Once you find it, wait patiently until the attendants announce for boarding.</string>
    <string name="gate">Gate Info</string>
    <string name="boardingInfoHd">Boarding Line</string>
</resources>

