<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <RelativeLayout
        android:id="@+id/activity_new_trip"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.exotikosteam.exotikos.activities.NewTripActivity">

        <TextView
            android:text="@string/airline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/tvAirline" />

        <Button
            android:text="@string/select_airline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvAirline"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/btnSelectAirline"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:text="@string/flight_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnSelectAirline"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/tvFlightNumber" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:layout_below="@+id/tvFlightNumber"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/etFlightNumber"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:hint="@string/new_trip_enter_flight_number" />

        <TextView
            android:text="@string/new_trip_departure_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etFlightNumber"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/tvDepartureDate" />

        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvDepartureDate"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/dpDepartureDate"
            android:calendarViewShown="false" />

        <TextView
            android:text="@string/new_trip_scan_boarding_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvScanBoardingPass"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/dpDepartureDate"/>

        <Button
            android:text="@string/new_trip_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvScanBoardingPass"
            android:layout_centerHorizontal="true"
            android:id="@+id/btnScan" />


    </RelativeLayout>

</ScrollView>
