<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_margin="10dp"
        >

        <CheckedTextView
            android:text="@string/idString"
            android:checkMark="@drawable/checkbox_marked_circle_outline"
            android:checkMarkTint="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_travel_margin_top"
            android:layout_marginLeft="@dimen/fragment_travel_prep_padding"
            android:layout_marginRight="@dimen/fragment_horizontal_margin"
            android:id="@+id/cbID" />

        <CheckedTextView
            android:text="@string/cabinBags"
            android:checkMark="@drawable/checkbox_marked_circle_outline"
            android:checkMarkTint="@color/colorAccent"
            android:layout_marginRight="@dimen/fragment_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_horizontal_margin"
            android:layout_marginLeft="@dimen/fragment_travel_prep_padding"
            android:id="@+id/cbCabinBags" />

        <CheckedTextView
            android:text="@string/strollerRules"
            android:checkMark="@drawable/checkbox_marked_circle_outline"
            android:checkMarkTint="@color/colorAccent"
            android:layout_marginRight="@dimen/fragment_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_horizontal_margin"
            android:layout_marginLeft="@dimen/fragment_travel_prep_padding"
            android:id="@+id/cbStroller" />

        <CheckedTextView
            android:text="@string/bagRules"
            android:checkMark="@drawable/checkbox_marked_circle_outline"
            android:checkMarkTint="@color/colorAccent"
            android:layout_marginRight="@dimen/fragment_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_horizontal_margin"
            android:layout_marginLeft="@dimen/fragment_travel_prep_padding"
            android:id="@+id/cbHandbag" />

        <CheckedTextView
            android:text="@string/liquidRules1"
            android:checkMark="@drawable/checkbox_marked_circle_outline"
            android:checkMarkTint="@color/colorAccent"
            android:layout_marginRight="@dimen/fragment_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_horizontal_margin"
            android:layout_marginLeft="@dimen/fragment_travel_prep_padding"
            android:id="@+id/cbLiquidRules1" />

        <CheckedTextView
            android:text="@string/liquidRules2"
            android:checkMark="@drawable/checkbox_marked_circle_outline"
            android:checkMarkTint="@color/colorAccent"
            android:layout_marginRight="@dimen/fragment_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_horizontal_margin"
            android:layout_marginLeft="@dimen/fragment_travel_prep_padding"
            android:id="@+id/cbLiquidRules2" />

        <CheckedTextView
            android:text="@string/liquidRules3"
            android:checkMark="@drawable/checkbox_marked_circle_outline"
            android:checkMarkTint="@color/colorAccent"
            android:layout_marginRight="@dimen/fragment_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_horizontal_margin"
            android:layout_marginLeft="@dimen/fragment_travel_prep_padding"
            android:id="@+id/cbLiquidRules3" />

        <CheckedTextView
            android:text="@string/laptopRules"
            android:checkMark="@drawable/checkbox_marked_circle_outline"
            android:checkMarkTint="@color/colorAccent"
            android:layout_marginRight="@dimen/fragment_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_horizontal_margin"
            android:layout_marginLeft="@dimen/fragment_travel_prep_padding"
            android:id="@+id/checkBox4" />
        <View
            android:id="@+id/spacer"
            style="@style/cardViewSeparator"/>

        <Button
            android:id="@+id/btnNext"
            android:layout_below="@+id/spacer"
            android:text="Read more"
            style="@style/cardViewButton"/>

    </LinearLayout>

</layout>